--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -31,10 +31,7 @@
             <DataTemplate DataType="{x:Type vm:SearchTester}">
                 <screen:SearchTester />
             </DataTemplate>
-            <DataTemplate DataType="{x:Type vm:SearchViewModel}">
-                <screen:Search />
-            </DataTemplate>
-            <DataTemplate DataType="{x:Type vm:PatientsManager}">
+            <DataTemplate DataType="{x:Type vm:PatientsListViewModel}">
                 <screen:Patients />
             </DataTemplate>            
         </ResourceDictionary>
@@ -59,8 +56,8 @@
             </Grid.Background>
             <Menu>
                 <MenuItem Header="_Пациенты">
-                    <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все" />
-                    <MenuItem Command="{Binding AddPatientCommand}" Header="_Создать..."  />
+                    <MenuItem Command="{Binding OpenPatientsCommand}" Header="_Все пациенты" />
+                    <MenuItem Command="{Binding AddPatientCommand}" Header="_Новый..."  />
                 </MenuItem>
                 <MenuItem Header="_Вид">
                     <MenuItem Header="_Слова" Command="{Binding OpenWordsCommand}" />
@@ -106,8 +103,8 @@
                             <TextBlock Style="{StaticResource verticalTextBlock}">Пациенты</TextBlock>
                         </ToggleButton>
                     </TabItem.Header>
-                    <screen:Patients x:Name="patients"
-        			                 DataContext="{Binding Patients}"
+                    <screen:PatientsAside x:Name="patientsAside"
+        			                 DataContext="{Binding PatientsAside}"
         			                 Margin="5,0,5,0" />
                 </TabItem>
                 <TabItem IsSelected="{Binding SearchAsideVisible}"
