add Week unit to DateOffset

--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -14,7 +14,8 @@
         <conv:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <conv:AgeToYearsLabel x:Key="AgeToLabel" />
         <conv:BoolToSexSign x:Key="SexToSign" />
-        <conv:DateUnitToLabel x:Key="unitConverter" />
+        <conv:OffsetUnitToUnitLabel x:Key="OffsetUnitToUnitLabel" />
+        <conv:DateOffsetToUnitLabel x:Key="DateOffsetToUnitLabel" />
         <conv:Summator x:Key="SummatorConverter" />
         <conv:ManToShortName x:Key="ManToShortName" />
         <conv:EqualityToBoolConverter x:Key="EqualityToBool" />
