--- a/Diagnosis.App/Controls/Directory/FullTree.xaml
+++ b/Diagnosis.App/Controls/Directory/FullTree.xaml
@@ -26,13 +26,11 @@
                 <MouseBinding MouseAction="RightClick" Command="{Binding Editable.EditCommand}" />
             </InputBindingCollection>
 
-            <Style x:Key="fullTreeItemContainerStyle" 
-                   TargetType="TreeViewItem" 
-                   BasedOn="{StaticResource TreeViewItemStyle}" >
+            <Style x:Key="fullTreeItemContainerStyle"
+                   TargetType="TreeViewItem"
+                   BasedOn="{StaticResource TreeViewItemStyle}">
                 <Setter Property="Template" Value="{StaticResource treeViewItemControl}" />
                 <Setter Property="IsSelected" Value="{Binding IsSelected}" />
-                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                <Setter Property="VerticalContentAlignment" Value="Center"/>
                 <Setter Property="controls:Attached.InputBindings" Value="{StaticResource InputBindings}" />
             </Style>
 
@@ -41,18 +39,15 @@
                 ItemsSource="{Binding Children}">
                 <controls:TreeItemLight />
             </HierarchicalDataTemplate>
-
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
         <TreeView
             x:Name="tree"
-            MinWidth="50"
-            HorizontalContentAlignment="Stretch"
+            Style="{StaticResource TreeViewStyle}"
             ItemContainerStyle="{StaticResource fullTreeItemContainerStyle}"
             ItemTemplate="{StaticResource fullTreeItemTemplate}"
-            ItemsSource="{Binding}" 
-            ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            ItemsSource="{Binding}">
         </TreeView>
     </Grid>
 </UserControl>
