--- a/Diagnosis.App/Controls/Search/SearchTree.xaml
+++ b/Diagnosis.App/Controls/Search/SearchTree.xaml
@@ -29,8 +29,6 @@
                 <Setter Property="IsSelected" Value="{Binding IsSelected}" />
                 <Setter Property="IsExpanded" Value="{Binding IsFiltered}" />
                 <Setter Property="Visibility" Value="{Binding IsFiltered, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                <Setter Property="VerticalContentAlignment" Value="Center" />
                 <Setter Property="controls:Attached.InputBindings" Value="{StaticResource InputBindings}" />
                 <EventSetter Event="Selected" Handler="item_selected"/>
             </Style>
@@ -78,11 +76,10 @@
                IsOpen="{Binding IsResultsVisible, Mode=TwoWay}"
                PlacementTarget="{Binding ElementName=input, Mode=OneWay}">
             <TreeView x:Name="results"
-                HorizontalContentAlignment="Stretch"
+                Style="{StaticResource TreeViewStyle}"
                 ItemContainerStyle="{StaticResource simpleTreeItemContainerStyle}"
                 ItemTemplate="{StaticResource simpleTreeItemTemplate}"
-                ItemsSource="{Binding Results}"
-                ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                ItemsSource="{Binding Results}">
             </TreeView>
         </Popup>
     </Grid>
