--- a/Diagnosis.App/Screens/PatientsAside.xaml
+++ b/Diagnosis.App/Screens/PatientsAside.xaml
@@ -42,23 +42,30 @@
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding SelectedPatient}"
                   Style="{StaticResource list}"
-                  Grid.Row="2" 
-                  Margin="0,5,0,0" 
+                  Grid.Row="2"
+                  Margin="0,5,0,0"
                   HorizontalContentAlignment="Stretch">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="30"/>
+                            <ColumnDefinition Width="30" />
                             <ColumnDefinition />
+                            <ColumnDefinition Width="30"/>
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Text="{Binding Label}" />
                         <TextBlock Text="{Binding Converter={StaticResource ManToShortName}}" Grid.Column="1" />
+                        <TextBlock  Grid.Column="2">
+                            <TextBlock Text="{Binding Age}" />
+                            <!--<TextBlock Text="{Binding Age, Converter={StaticResource ageLabel}}" VerticalAlignment="Center" />-->
+                        </TextBlock>
                         <TextBlock x:Name="unsaved"
-                                   Grid.Column="1"
+                                   Grid.ColumnSpan="3"
                                    HorizontalAlignment="Right"
-                                   Text="new"
+                                   Text="*"
+                                   FontSize="16"
+                                   LineStackingStrategy="BlockLineHeight"
                                    Visibility="{Binding Editable.IsDirty, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
                     </Grid>
                 </DataTemplate>
