--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -6,7 +6,23 @@
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="400">
-    <Grid HorizontalAlignment="Stretch" MaxWidth="300" MinWidth="250">
+    <UserControl.Resources>
+        <Style x:Key="SexCheckbox" TargetType="{x:Type CheckBox}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type CheckBox}">
+                        <TextBlock x:Name="sign" 
+                                   FontSize="17" 
+                                   HorizontalAlignment="Center"
+                                   Margin="0,-2,0,0"
+                                   Text="{Binding IsChecked, Mode=OneWay, Converter={StaticResource SexToSign}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" />
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    
+    <Grid HorizontalAlignment="Stretch" MaxWidth="500" MinWidth="300">
         <Grid.RowDefinitions>
             <RowDefinition Height="36" />
             <RowDefinition Height="auto" />
@@ -39,17 +55,20 @@
         </controls:FloatSearch>
 
         <DataGrid Grid.Row="3"
-                  AutoGenerateColumns="False"
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding SelectedPatient}"
                   GridLinesVisibility="None"
                   Margin="0,10,0,0"
-                  SelectionMode="Single">
+                  FontSize="15"
+                  SelectionMode="Single" 
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Ключ" IsReadOnly="True" Binding="{Binding Label}" />
                 <DataGridTextColumn Header="Фамилия" IsReadOnly="True" Binding="{Binding LastName}" />
                 <DataGridTextColumn Header="Имя" IsReadOnly="True" Binding="{Binding FirstName}" />
-                <DataGridTextColumn Header="Отчество" IsReadOnly="True" Binding="{Binding MiddleName}" />
+                <DataGridTextColumn Header="Отчество" Binding="{Binding MiddleName}" />
+                <DataGridCheckBoxColumn Header="Пол" IsReadOnly="True" Binding="{Binding IsMale}" ElementStyle="{StaticResource SexCheckbox}"/>
+                <DataGridTextColumn Header="Возраст" IsReadOnly="True" Binding="{Binding Age}" />
             </DataGrid.Columns>
             <DataGrid.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding OpenPatientCommand}" />
