--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -1,18 +1,21 @@
-﻿<UserControl x:Class="Diagnosis.App.Screens.Patients"
+﻿<Page x:Class="Diagnosis.App.Screens.Patients"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
+             x:Name="patientsControl"
+             Loaded="patientsControl_Loaded"
+             FocusManager.IsFocusScope="True"
              d:DesignHeight="300" d:DesignWidth="400">
-    <UserControl.Resources>
+    <Page.Resources>
         <Style x:Key="SexCheckbox" TargetType="{x:Type CheckBox}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type CheckBox}">
-                        <TextBlock x:Name="sign" 
-                                   FontSize="17" 
+                        <TextBlock x:Name="sign"
+                                   FontSize="17"
                                    HorizontalAlignment="Center"
                                    Margin="0,-2,0,0"
                                    Text="{Binding IsChecked, Mode=OneWay, Converter={StaticResource SexToSign}, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type CheckBox}}}" />
@@ -20,8 +23,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </UserControl.Resources>
-    
+    </Page.Resources>
+
     <Grid HorizontalAlignment="Stretch" MaxWidth="500" MinWidth="300">
         <Grid.RowDefinitions>
             <RowDefinition Height="36" />
@@ -54,26 +57,35 @@
             </controls:FloatSearch.InputBindings>
         </controls:FloatSearch>
 
-        <DataGrid Grid.Row="3"
+        <DataGrid x:Name="dataGrid"
+                  Grid.Row="3"
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding SelectedPatient}"
                   GridLinesVisibility="None"
                   Margin="0,10,0,0"
                   FontSize="15"
-                  SelectionMode="Single" 
-                  AutoGenerateColumns="False">
+                  IsReadOnly="True"
+                  SelectionUnit="FullRow"
+                  SelectionMode="Single"
+                  AutoGenerateColumns="False">            
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Ключ" IsReadOnly="True" Binding="{Binding Label}" />
                 <DataGridTextColumn Header="Фамилия" IsReadOnly="True" Binding="{Binding LastName}" />
                 <DataGridTextColumn Header="Имя" IsReadOnly="True" Binding="{Binding FirstName}" />
-                <DataGridTextColumn Header="Отчество" Binding="{Binding MiddleName}" />
-                <DataGridCheckBoxColumn Header="Пол" IsReadOnly="True" Binding="{Binding IsMale}" ElementStyle="{StaticResource SexCheckbox}"/>
+                <DataGridTextColumn Header="Отчество" IsReadOnly="True" Binding="{Binding MiddleName}" />
+                <DataGridCheckBoxColumn Header="Пол" IsReadOnly="True" Binding="{Binding IsMale}" ElementStyle="{StaticResource SexCheckbox}" />
                 <DataGridTextColumn Header="Возраст" IsReadOnly="True" Binding="{Binding Age}" />
             </DataGrid.Columns>
             <DataGrid.InputBindings>
                 <KeyBinding Key="Enter" Command="{Binding OpenPatientCommand}" />
                 <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenPatientCommand}" />
             </DataGrid.InputBindings>
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="BorderThickness" Value="0"/>
+                    <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                </Style>
+            </DataGrid.CellStyle>
         </DataGrid>
     </Grid>
-</UserControl>
+</Page>
