--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -8,6 +8,7 @@
         x:Class="Diagnosis.App.Windows.MainWindow"
         mc:Ignorable="d"
         x:Name="root"
+        Loaded="root_Loaded"
         Title="MainWindow" Height="700" Width="800">
     <Window.Resources>
         <ResourceDictionary>
@@ -120,7 +121,8 @@
             </TabControl>
         </DockPanel>
 
-        <Frame x:Name="frame" Grid.Row="1"/>
+        <Frame x:Name="frame"
+               Grid.Row="1"/>
         <ContentControl Content="{Binding CurrentScreen}"
                         Grid.Row="2" />
     </Grid>
