layout: hr text and editor, hr list. revert for hr.

--- a/Diagnosis.App/Controls/Card/AppointmentsTabs.xaml
+++ b/Diagnosis.App/Controls/Card/AppointmentsTabs.xaml
@@ -64,7 +64,7 @@
                     ItemTemplateSelector="{StaticResource addNewSelector}">
             <TabControl.ContentTemplate>
                 <DataTemplate>
-                    <card:Appointment Margin="10" DataContext="{Binding Content}" />
+                    <card:Appointment DataContext="{Binding Content}" />
                 </DataTemplate>
             </TabControl.ContentTemplate>
         </TabControl>
