--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -12,7 +12,7 @@
     <UserControl.Resources>
         <InputBindingCollection x:Shared="False" x:Key="HRInputBindings">
             <KeyBinding Key="Space" Command="{Binding ToggleCommand}" />
-            <!--<KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />-->
+            <KeyBinding Key="F2" Command="{Binding Editable.EditCommand}" />
             <KeyBinding Key="Enter" Command="{Binding Editable.CommitCommand}" />
             <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
             <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
@@ -23,7 +23,7 @@
 
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Control" Key="N" Command="{Binding AddHealthRecordCommand}" />
-        <KeyBinding Key="F2" Command="{Binding EditHrCommand}" />
+        <!--<KeyBinding Key="F2" Command="{Binding EditHrCommand}" />-->
     </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
@@ -32,7 +32,7 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <StackPanel Style="{StaticResource buttonsBar}">
+        <StackPanel Style="{StaticResource buttonsBar}" Margin="10">
             <StackPanel.Resources>
                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource barButton}" />
             </StackPanel.Resources>
@@ -49,6 +49,7 @@
 
         <ListView x:Name="records"
                   Grid.Row="1"
+                  Margin="10,0,10,0"
                   ItemsSource="{Binding HealthRecordsView}"
                   IsSynchronizedWithCurrentItem="True"
                   SelectedItem="{Binding SelectedHealthRecord}"
@@ -65,8 +66,14 @@
                                 <Setter.Value>
                                     <ControlTemplate>
                                         <StackPanel>
-                                            <TextBlock Text="{Binding Name, Mode=OneWay}" FontWeight="Bold" HorizontalAlignment="Right"></TextBlock>
-                                            <Separator />
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition />
+                                                    <ColumnDefinition Width="auto" />
+                                                </Grid.ColumnDefinitions>
+                                                <Separator Foreground="Gray" VerticalAlignment="Center" />
+                                                <TextBlock Text="{Binding Name, Mode=OneWay}" Grid.Column="1" HorizontalAlignment="Right" Margin="10,0,5,0" />
+                                            </Grid>
                                             <ItemsPresenter />
                                         </StackPanel>
                                     </ControlTemplate>
@@ -79,7 +86,7 @@
 
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <card:HealthRecord />
+                    <card:HealthRecord Margin="0,0,0,5"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
 
@@ -90,14 +97,15 @@
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-
-        <Grid Grid.Row="2" Visibility="{Binding ShowHrEditor, Converter={StaticResource BooleanToVisibilityConverter}}">
-            <Border BorderThickness="0,1,0,0" Padding="0,10,0,0" SnapsToDevicePixels="True">
-                <Border.BorderBrush>
-                    <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ActiveBorderColorKey}}"/>
-                </Border.BorderBrush>
-                <editors:HealthRecordEditorShared DataContext="{Binding HealthRecordEditor}" ></editors:HealthRecordEditorShared>
-            </Border>
-        </Grid>
+        <Border Grid.Row="2" BorderThickness="0,1,0,0" Padding="0,10,0,0" SnapsToDevicePixels="True"
+                Visibility="{Binding ShowHrEditor, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <Border.BorderBrush>
+                <SolidColorBrush Color="Gray" />
+            </Border.BorderBrush>
+            
+            <Grid Margin="10,0,10,10">
+                <editors:HealthRecordEditorShared DataContext="{Binding HealthRecordEditor}" />
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
