--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -5,29 +5,59 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"
              x:Name="editor"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="400">
+             d:DesignHeight="150" d:DesignWidth="600">
+    <!--DataContext is HrEditorViewModel-->
     <UserControl.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource label90}" />
     </UserControl.Resources>
     <Grid DataContext="{Binding HealthRecord}">
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
-        <StackPanel>
+
+        <StackPanel VerticalAlignment="Center">
+            <StackPanel.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Padding" Value="5,10" />
+                    <Setter Property="FontSize" Value="16 " />
+                    <Setter Property="Margin" Value="0,5,5,5" />
+                </Style>
+            </StackPanel.Resources>
+
+            <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
+                    CommandParameter="{StaticResource True}">↑</Button>
+            <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
+                    CommandParameter="{StaticResource False}" >↓</Button>
+        </StackPanel>
+
+        <StackPanel Grid.Column="1">
             <StackPanel.Resources>
                 <Style TargetType="DockPanel" BasedOn="{StaticResource formLine}" />
             </StackPanel.Resources>
             <DockPanel>
-                <TextBox ToolTip="Числовое значение" Text="{Binding NumValue}" Width="60" Margin="10,0,0,0" DockPanel.Dock="Right"
-                         HorizontalContentAlignment="Right" HorizontalAlignment="Right">
-                    <controls:WatermarkService.Watermark>
-                        <TextBlock Style="{StaticResource watermark}" Margin="5,0,0,0">число</TextBlock>
-                    </controls:WatermarkService.Watermark>
-                </TextBox>
-                <controls:AutoComplete DataContext="{Binding DataContext.AutoComplete, ElementName=editor}" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <controls:AutoComplete DataContext="{Binding DataContext.AutoComplete, ElementName=editor}" />
+                    <TextBox Text="{Binding NumValue, StringFormat={}{0:G6}}"
+                             ToolTip="Числовое значение"
+                             Width="60"
+                             Margin="10,0,0,0"
+                             Grid.Column="1"
+                             HorizontalContentAlignment="Right" HorizontalAlignment="Right">
+                        <controls:WatermarkService.Watermark>
+                            <TextBlock Style="{StaticResource watermark}" Margin="5,0,0,0">число</TextBlock>
+                        </controls:WatermarkService.Watermark>
+                    </TextBox>
+                </Grid>
             </DockPanel>
             <DockPanel>
                 <editors:CategoryChooser HorizontalAlignment="Left" />
@@ -56,33 +86,36 @@
             </DockPanel>
         </StackPanel>
 
-        <StackPanel Grid.Column="1">
+        <StackPanel Grid.Column="2" Margin="20,0,0,0" VerticalAlignment="Center">
             <StackPanel.Resources>
                 <Style TargetType="Button">
-                    <Setter Property="Margin" Value="5" />
-                    <Setter Property="HorizontalContentAlignment" Value="Left"/>
+                    <Setter Property="Margin" Value="0,0,0,10" />
+                    <!--<Setter Property="Padding" Value="3" />-->
+                    <!--<Setter Property="Height" Value="23" />-->
+                    <Setter Property="HorizontalContentAlignment" Value="Left" />
                 </Style>
             </StackPanel.Resources>
 
-            <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}">
+            <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}" ToolTip="Добавляет запись"
+                    Margin="0,0,0,20">
                 <DockPanel>
                     <Image Source="{StaticResource addImage}" Margin="0,0,5,0" />
                     <TextBlock Text="Добавить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.CommitCommand}">
+            <Button Command="{Binding Editable.CommitCommand}" ToolTip="Сохраняет измнения и закрывает редактор">
                 <DockPanel>
                     <Image Source="{StaticResource saveImage}" Margin="0,0,5,0" />
-                    <TextBlock Text="Сохранить" />
-                </DockPanel>
-            </Button>
-            <Button Command="{Binding Editable.RevertCommand}">
-                <DockPanel>
-                    <Image Source="{StaticResource closeImage}" Margin="0,0,5,0" />
                     <TextBlock Text="Закрыть" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.DeleteCommand}">
+            <Button Command="{Binding Editable.RevertCommand}" ToolTip="Закрывает редактор без сохранения изменений">
+                <DockPanel>
+                    <Image Source="{StaticResource closeImage}" Margin="0,0,5,0" />
+                    <TextBlock Text="Отменить" />
+                </DockPanel>
+            </Button>
+            <Button Command="{Binding Editable.DeleteCommand}" ToolTip="Удаляет запись">
                 <DockPanel>
                     <TextBlock Text="Удалить" Margin="21,0,0,0" />
                 </DockPanel>
