--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -94,30 +94,37 @@
                     <!--<Setter Property="Height" Value="23" />-->
                     <Setter Property="HorizontalContentAlignment" Value="Left" />
                 </Style>
+                <Style TargetType="Image">
+                    <Setter Property="Margin" Value="0,0,5,0" />
+                    <Setter Property="SnapsToDevicePixels" Value="True" />
+                    <!--<Setter Property="Padding" Value="3" />-->
+                    <!--<Setter Property="Height" Value="23" />-->
+                </Style>
             </StackPanel.Resources>
 
             <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}" ToolTip="Добавляет запись"
                     Margin="0,0,0,20">
                 <DockPanel>
-                    <Image Source="{StaticResource addImage}" Margin="0,0,5,0" />
+                    <Image Source="{StaticResource addImage}" />
                     <TextBlock Text="Добавить" />
                 </DockPanel>
             </Button>
             <Button Command="{Binding Editable.CommitCommand}" ToolTip="Сохраняет измнения и закрывает редактор">
                 <DockPanel>
-                    <Image Source="{StaticResource saveImage}" Margin="0,0,5,0" />
+                    <Image Source="{StaticResource saveImage}" />
                     <TextBlock Text="Закрыть" />
                 </DockPanel>
             </Button>
             <Button Command="{Binding Editable.RevertCommand}" ToolTip="Закрывает редактор без сохранения изменений">
                 <DockPanel>
-                    <Image Source="{StaticResource closeImage}" Margin="0,0,5,0" />
+                    <Image Source="{StaticResource undoImage}" />
                     <TextBlock Text="Отменить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.DeleteCommand}" ToolTip="Удаляет запись">
+            <Button Command="{Binding Editable.DeleteCommand}" ToolTip="Удаляет запись" Margin="0,10,0,0">
                 <DockPanel>
-                    <TextBlock Text="Удалить" Margin="21,0,0,0" />
+                    <Image Source="{StaticResource deleteImage}"  Width="16" />
+                    <TextBlock Text="Удалить" />
                 </DockPanel>
             </Button>
         </StackPanel>
