--- a/Diagnosis.App/App.xaml
+++ b/Diagnosis.App/App.xaml
@@ -29,6 +29,8 @@
         <BitmapImage x:Key="closeImage" UriSource="Resources/Close_16xLG.png" />
         <BitmapImage x:Key="addImage" UriSource="/Resources/AddControl_371.png" />
         <BitmapImage x:Key="saveImage" UriSource="/Resources/save_16xLG.png" />
+        <BitmapImage x:Key="undoImage" UriSource="/Resources/Arrow_UndoRevertRestore_16xLG.png" />
+        <BitmapImage x:Key="deleteImage" UriSource="/Resources/Delete_black_32x32.png" />
 
 
         <s:Boolean x:Key="True">True</s:Boolean>
