multiselection in hr list. now IsSelected and IsChecked sync (except when checked directly by checkbox)

--- a/Diagnosis.App/Controls/Card/Appointment.xaml
+++ b/Diagnosis.App/Controls/Card/Appointment.xaml
@@ -56,7 +56,7 @@
                   Style="{StaticResource list}"
                   HorizontalContentAlignment="Stretch"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
-                  SelectionMode="Single"
+                  SelectionMode="Extended"
                   SelectionChanged="records_SelectionChanged">
             <ListView.GroupStyle>
                 <GroupStyle>
