--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -5,15 +5,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"
+             xmlns:vm="clr-namespace:Diagnosis.App.ViewModels"             
              x:Name="editor"
+             Padding="0,10,0,0"
              mc:Ignorable="d"
              d:DesignHeight="150" d:DesignWidth="600">
     <!--DataContext is HrEditorViewModel-->
     <UserControl.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource label90}" />
     </UserControl.Resources>
-    <Grid DataContext="{Binding HealthRecord}">
+
+    <!--DataContext is editing HealthRecord-->
+    <Grid x:Name="hr_grid" DataContext="{Binding HealthRecord}" MouseDown="hr_grid_MouseDown" Focusable="True" Background="Transparent"> 
+        <Grid.InputBindings>
+            <KeyBinding Modifiers="Control" Key="S" Command="{Binding Editable.CommitCommand}" />
+            <KeyBinding Key="Escape" Command="{Binding Editable.RevertCommand}" />
+            <KeyBinding Key="Delete" Command="{Binding Editable.DeleteCommand}" />
+        </Grid.InputBindings>
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
@@ -30,9 +39,9 @@
             </StackPanel.Resources>
 
             <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
-                    CommandParameter="{StaticResource True}">↑</Button>
+                    CommandParameter="{StaticResource True}" ToolTip="Открыть предыдущую запись (Crtl + Стрелка вверх)">↑</Button>
             <Button Command="{Binding DataContext.MoveHrSelectionCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}"
-                    CommandParameter="{StaticResource False}" >↓</Button>
+                    CommandParameter="{StaticResource False}" ToolTip="Открыть следующую запись (Crtl + Стрелка вниз)" >↓</Button>
         </StackPanel>
 
         <StackPanel Grid.Column="1">
@@ -102,26 +111,27 @@
                 </Style>
             </StackPanel.Resources>
 
-            <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}" ToolTip="Добавляет запись"
+            <Button Command="{Binding DataContext.AddHealthRecordCommand, RelativeSource={RelativeSource AncestorType=UserControl, AncestorLevel=2}}" 
+                    ToolTip="Добавить запись (Ctrl + N)"
                     Margin="0,0,0,20">
                 <DockPanel>
                     <Image Source="{StaticResource addImage}" />
                     <TextBlock Text="Добавить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.CommitCommand}" ToolTip="Сохраняет измнения и закрывает редактор">
+            <Button Command="{Binding Editable.CommitCommand}" ToolTip="Закрыть редактор, сохранив все изменения (Ctrl + S)">
                 <DockPanel>
                     <Image Source="{StaticResource saveImage}" />
                     <TextBlock Text="Закрыть" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.RevertCommand}" ToolTip="Закрывает редактор без сохранения изменений">
+            <Button Command="{Binding Editable.RevertCommand}" ToolTip="Закрыть редактор без сохранения изменений (Esc)">
                 <DockPanel>
                     <Image Source="{StaticResource undoImage}" />
                     <TextBlock Text="Отменить" />
                 </DockPanel>
             </Button>
-            <Button Command="{Binding Editable.DeleteCommand}" ToolTip="Удаляет запись" Margin="0,10,0,0">
+            <Button Command="{Binding Editable.DeleteCommand}" Margin="0,10,0,0" ToolTip="Удалить текущую запись (Del)">
                 <DockPanel>
                     <Image Source="{StaticResource deleteImage}"  Width="16" />
                     <TextBlock Text="Удалить" />
